--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ th {
   border-radius: 0px 0px 0px 12px;
 }
 
-h1,
 h2,
 h3,
 h4,
@@ -53,6 +52,8 @@ h5 {
 h1 {
   text-align: center;
   color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 48px;
 }
 
 h2 {
