--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,21 @@ p {
   background-color: #3e8e41;
 }
 
+.endButton {
+  display: none;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: rgb(248, 50, 50);
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
 .loginbutton {
   display: inline-block;
   padding: 15px 25px;
