--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ p {
 }
 
 .endButton {
-  display: none;
+  display: inline-block;
   padding: 15px 25px;
   font-size: 24px;
   cursor: pointer;
