--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,10 @@ p {
   box-shadow: 0 9px #999;
 }
 
+#endButton {
+  background-color: rgb(248, 50, 50);
+}
+
 .button:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
@@ -179,21 +183,6 @@ p {
 
 .button:disabled {
   background-color: #3e8e41;
-}
-
-.endButton {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: rgb(248, 50, 50);
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
 }
 
 .loginbutton {
