--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ p {
 #endButton {
   background-color: rgb(248, 50, 50);
 }
-
+/*
 .button:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
@@ -184,7 +184,7 @@ p {
 .button:disabled {
   background-color: #3e8e41;
 }
-
+*/
 .loginbutton {
   display: inline-block;
   padding: 15px 25px;
