--- a/css/style.css
+++ b/css/style.css
@@ -171,9 +171,21 @@ p {
   box-shadow: 0 9px #999;
 }
 
-#endButton {
-  background-color: (248, rgb50, 50);
+.endButton {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: rgb(193, 85, 85);
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
 }
+
 /*
 .button:active {
   background-color: #3e8e41;
