--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ tr:nth-child(even) {
 }
 
 th {
-  background-color: #3e8e41;
+  background-color: #e57373;
   color: white;
   font-size: 20px;
 }
